--- a/Morpion/src/main/resources/com/example/morpion/Acceuil-view.fxml
+++ b/Morpion/src/main/resources/com/example/morpion/Acceuil-view.fxml
@@ -8,19 +8,10 @@
    <children>
       <MenuBar prefHeight="34.0" prefWidth="${anchorpane.width}" style="-fx-background-color: blue;">
         <menus>
-          <Menu mnemonicParsing="false" text="File">
+          <Menu mnemonicParsing="false" text="IA">
             <items>
-              <MenuItem mnemonicParsing="false" text="Close" />
-            </items>
-          </Menu>
-          <Menu mnemonicParsing="false" text="Edit">
-            <items>
-              <MenuItem mnemonicParsing="false" text="Delete" />
-            </items>
-          </Menu>
-          <Menu mnemonicParsing="false" text="Help">
-            <items>
-              <MenuItem mnemonicParsing="false" text="About" />
+              <MenuItem mnemonicParsing="false" text="Settings" />
+                  <MenuItem mnemonicParsing="false" text="Models" />
             </items>
           </Menu>
         </menus>
