interface de Settings avec son controleur version 2

--- a/Morpion/src/main/resources/com/example/morpion/Acceuil-view.fxml
+++ b/Morpion/src/main/resources/com/example/morpion/Acceuil-view.fxml
@@ -10,7 +10,7 @@
         <menus>
           <Menu mnemonicParsing="false" text="IA">
             <items>
-              <MenuItem mnemonicParsing="false" text="Settings" />
+              <MenuItem mnemonicParsing="false" onAction="#onclickSetting" text="Settings" />
                   <MenuItem mnemonicParsing="false" text="Models" />
             </items>
           </Menu>
