interface de Models avec son controlleur

--- a/Morpion/src/main/resources/com/example/morpion/Acceuil-view.fxml
+++ b/Morpion/src/main/resources/com/example/morpion/Acceuil-view.fxml
@@ -11,7 +11,7 @@
           <Menu mnemonicParsing="false" text="IA">
             <items>
               <MenuItem mnemonicParsing="false" onAction="#onclickSetting" text="Settings" />
-                  <MenuItem mnemonicParsing="false" text="Models" />
+                  <MenuItem mnemonicParsing="false" onAction="#onclickModel" text="Models" />
             </items>
           </Menu>
         </menus>
