--- a/Morpion/src/main/resources/com/example/morpion/Acceuil-view.fxml
+++ b/Morpion/src/main/resources/com/example/morpion/Acceuil-view.fxml
@@ -21,7 +21,7 @@
                   <Image url="@../images/img.png" />
                </image>
             </ImageView>
-      <Button fx:id="button" layoutX="124.0" layoutY="483.0" mnemonicParsing="false" style="-fx-background-color: blue;" text="Humain vs Humain" />
-      <Button fx:id="button2" layoutX="607.0" layoutY="483.0" mnemonicParsing="false" style="-fx-background-color: blue;" text="Humain vs Machine" />
+      <Button fx:id="button" layoutX="124.0" layoutY="483.0" mnemonicParsing="false" onAction="#onclickVsHumain" style="-fx-background-color: blue;" text="Humain vs Humain" />
+      <Button fx:id="button2" layoutX="607.0" layoutY="483.0" mnemonicParsing="false" onAction="#onclickVSHumain" style="-fx-background-color: blue;" text="Humain vs Machine" />
    </children>
 </AnchorPane>
